--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -34,3 +34,22 @@
   font-weight: 700;
   font-style: normal;
 }
+@font-face {
+  font-family: 'D-DIN';
+  src: url('/fonts/D-DIN-Regular.woff2') format('woff2'),
+       url('/fonts/D-DIN-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'D-DIN';
+  src: url('/fonts/D-DIN-Bold.woff2') format('woff2'),
+       url('/fonts/D-DIN-Bold.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+
